fix(web-masterdetail): added spacing

--- a/styles/web/sass/ui_resources/atlas_ui_resources/buildingblocks/_master-detail.scss
+++ b/styles/web/sass/ui_resources/atlas_ui_resources/buildingblocks/_master-detail.scss
@@ -9,6 +9,10 @@
             margin-bottom: $gutter-size;
         }
 
+        @media (max-width: $screen-lg) {
+            @include layout-spacing($type: margin, $direction: bottom, $device: responsive);
+        }
+
         @media (min-width: $screen-lg) {
             border-right: 1px solid $border-color-default;
 
